Fix spacing.

--- a/main.css
+++ b/main.css
@@ -93,6 +93,6 @@ main ul li {
     
     /* Increase spacing between nav and content when stacked */
     main {
-        margin-top: 120px;
+        margin-top: 130px;
     }
 }
